--- a/Makefile.config
+++ b/Makefile.config
@@ -2,7 +2,7 @@
 # Contributions simplifying and improving our build system are welcome!
 
 # cuDNN acceleration switch (uncomment to build with cuDNN).
-# USE_CUDNN := 1
+USE_CUDNN := 1
 
 # CPU-only switch (uncomment to build without GPU support).
 # CPU_ONLY := 1
@@ -103,7 +103,7 @@ BUILD_DIR := build
 DISTRIBUTE_DIR := distribute
 
 # Uncomment for debugging. Does not work on OSX due to https://github.com/BVLC/caffe/issues/171
-DEBUG := 1
+#DEBUG := 1
 
 # The ID of the GPU that 'make runtest' will use to run unit tests.
 TEST_GPUID := 0
